deploy/namespaces/monitoring/istio/02-peerauthentication-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: medplum-metrics-permissive
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-postgres-exporter
  mtls:
    mode: STRICT
  portLevelMtls:
    9187:   # postgres-exporter
      mode: PERMISSIVE

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: medplum-redis-metrics-permissive
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-redis-exporter
  mtls:
    mode: STRICT
  portLevelMtls:
    9121:   # redis-exporter
      mode: PERMISSIVE
      
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: airflow-postgres-exporter-permissive
  namespace: airflow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-postgres-exporter
  mtls:
    mode: STRICT
  portLevelMtls:
    9187:   # postgres-exporter
      mode: PERMISSIVE

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: pompetrack-core-metrics-permissive
  namespace: pompetrack-core
spec:
  selector:
    matchLabels:
      app: exporter
  mtls:
    mode: STRICT
  portLevelMtls:
    9000:   # minio metrics
      mode: PERMISSIVE

---
# Monitoring namespace : PERMISSIVE global
# Prometheus lui-même n'a pas besoin de mTLS pour être scrapé
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: monitoring-permissive
  namespace: monitoring
spec:
  mtls:
    mode: PERMISSIVE

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: pompetrack-core-metrics-permissive-worker-fhir
  namespace: pompetrack-core
spec:
  selector:
    matchLabels:
      app: worker-fhir
  mtls:
    mode: STRICT
  portLevelMtls:
    80:   
      mode: PERMISSIVE
