deploy/namespaces/monitoring/istio/04-monitoring-prometheus-admission-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: monitoring-prometheus-admission-permissive
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: kube-prometheus-stack-admission-create
  mtls:
    mode: PERMISSIVE
